Test-SecurityGroup.json
{
    "AWSTemplateFormatVersion": "2010-09-09",

    "Description" : "Firewall rules that control the traffic for Core, BackEnd, FrontEnd and Edge subnets",

    "Parameters" : {
		"VPCId" : {
            "Type" : "String"
        },
        "CountryCode" : {
			"Type" : "String",
            "Description" : "Abbreviation of the country's name",
			"AllowedValues" : [ "US", "IE", "DE", "JP", "KR", "SG", "AU", "IN", "BR" ]
		},
		"RegionCode" : {
			"Type" : "String",
            "Description" : "Abbreviation of the region",
			"AllowedValues" : [ "E1", "W1", "W2", "C1", "N1", "N2", "S1", "S2", "S1", "E1" ]
		},
		"Environment" : {
			"Type" : "String",
            "Description" : "Environemnt code"
		}

	},
    "Resources": {
        "BEAPPSecurityGroup1" : {
            "Type" : "AWS::EC2::SecurityGroup",
            "Properties" : {
                "GroupName" : { "Fn::Join" : [ "", [ "A",
                    { "Ref" : "CountryCode" },
                    { "Ref" : "RegionCode" },
                    "GPOASG" ,
                    { "Ref" : "Environment" },
                    "APPFE"
                ]]},
                "GroupDescription" : "FrontEnd security group. Managed by CloudForamtion",
                "VpcId" : {"Ref" : "VPCId"},
                "SecurityGroupIngress" : [
                {
                    "IpProtocol" : "tcp",
                    "FromPort" : "80",
                    "ToPort" : "80",
                    "CidrIp" : "10.0.0.0/8",
					"Description" : "Allow http traffic from EDGE security group of peered VPC EDGE SG where ALB/ELBs reside."
                },
				{
                    "IpProtocol" : "tcp",
                    "FromPort" : "443",
                    "ToPort" : "443",
                    "CidrIp" : "10.0.0.0/8",
					"Description" : "Allow http traffic from EDGE security group of peered VPC EDGE SG where ALB/ELBs reside."
                },
                {
                    "IpProtocol" : "udp",
                    "FromPort" : "53",
                    "ToPort" : "53",
                    "CidrIp" : "10.0.0.0/8",
                    "Description" : "DNS from WK WAN"
                },
                {
                    "IpProtocol" : "tcp",
                    "FromPort" : "53",
                    "ToPort" : "53",
                    "CidrIp" : "10.0.0.0/8",
                    "Description" : "DNS from WK WAN"
                },
                {
                    "IpProtocol" : "icmp",
                    "FromPort" : "8",
                    "ToPort" : "-1",
                    "CidrIp" : "10.0.0.0/8",
                    "Description" : "ping from WK WAN"
                },
                {
                    "IpProtocol" : "tcp",
                    "FromPort" : "3389",
                    "ToPort" : "3389",
                    "CidrIp" : "10.0.0.0/8",
                    "Description" : "RDP"
                },
                {
                    "IpProtocol" : "tcp",
                    "FromPort" : "22",
                    "ToPort" : "22",
                    "CidrIp" : "10.0.0.0/8",
                    "Description" : "SSH from WK WAN"
                }
                ],
                "SecurityGroupEgress" : [],
                "Tags" : [{"Key" : "Name", "Value" : { "Fn::Join" : [ "", [ "A",
                    { "Ref" : "CountryCode" },
                    { "Ref" : "RegionCode" },
                    "GPOASG" ,
                    { "Ref" : "Environment" },
                    "APPFE"
                ]]}}]
            }
        },

        "FESelfIngress1" : {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                },
                "IpProtocol": "tcp",
                "FromPort": "445",
                "ToPort": "445",
                "Description" : "CIFS FE to FE",
                "SourceSecurityGroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                }
            }
        },

        "FESelfIngress2" : {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                },
                "IpProtocol": "tcp",
                "FromPort": "1024",
                "ToPort": "65535",
                "Description" : "Ephemeral Ports FE to FE",
                "SourceSecurityGroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                }
            }
        },

        "FESelfIngress3" : {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                },
                "IpProtocol": "udp",
                "FromPort": "137",
                "ToPort": "138",
                "Description" : "CIFS FE to FE",
                "SourceSecurityGroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                }
            }
        },

        "FESelfIngress4" : {
            "Type": "AWS::EC2::SecurityGroupIngress",
            "Properties": {
                "GroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                },
                "IpProtocol": "tcp",
                "FromPort": "139",
                "ToPort": "139",
                "Description" : "CIFS FE to FE",
                "SourceSecurityGroupId": {
                    "Ref": "BEAPPSecurityGroup1"
                }
            }
        }
		},

    "Outputs" : {

		"FESecurityGroup" : {
            "Value" : {"Ref" : "BEAPPSecurityGroup1"},
            "Export" : {
             "Name" : "TestSecurityGroup"
            }
        }

            }
        }
